[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Specials/Blob.png" type="Texture" id=1]
[ext_resource path="res://scene/Blob.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Blob" type="Area2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 2 )
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Blob_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Blob_body_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
